FIXED ISSUES